--- a/src/main.css
+++ b/src/main.css
@@ -3,17 +3,24 @@
 	--url-bar-text-color: #000000;
 	/* better color choice than green */
 	--url-bar-button-color: #1ed760;
-    --request-background-color: #3E364C;
-    --response-background-color: #1C1D2F; 
+    --request-background-color: #09050D;
+    --response-background-color: #09050D;
+    --response-text-color: #EEEEEE;
     --response-background-body-color: #011e26; 
     --response-text-color: #f5f5f5; 
+    --highlight-text: #00DAC3;
+    --light-color: #EEE;
+    --dark-color: #191C1B;
+
+    /* #00DAC3 */
+    /* #EEEEEE */
+    /* #191C1B */
 
 	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
 	color: #0f0f0f;
-	background-color: #f6f6f6;
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -29,6 +36,16 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
+}
+
+.cool-color-text {
+    color: var(--highlight-text);
+}
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 #app {
