--- a/src/main.css
+++ b/src/main.css
@@ -36,6 +36,7 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
+    background-color: var(--request-background-color);
 }
 
 .cool-color-text {
