--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,16 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
 	--url-bar-background-color: #ffffff;
 	--url-bar-text-color: #000000;
 	/* better color choice than green */
 	--url-bar-button-color: #1ed760;
-	--request-background-color: #09050d;
-	--response-background-color: #09050d;
+    --background-color: #09050d;
+    --background-color-friend: #1b2735;
+    --background-color-friend-hex: 27, 39, 53;
 	--response-text-color: #eeeeee;
-	--response-background-body-color: #011e26;
 	--response-text-color: #f5f5f5;
 	--highlight-text: #00dac3;
 	--light-color: #eee;
@@ -20,7 +24,7 @@
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
-	color: #0f0f0f;
+	/* color: #0f0f0f; */
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -32,11 +36,16 @@
 	box-sizing: border-box;
 }
 
+.border-wrapper {
+    border: 1px solid var(--light-color);
+}
+
 body {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
-	background-color: var(--request-background-color);
+	background-color: var(--background-color);
+    /* color: var(--light-color); */
 }
 
 .cool-color-text {
